
2009-08-17
Initial Project in ajcodekatas
BindingEnvironment
ICommand
SetVariableCommand
CompositeCommand
IExpression
ConstantExpression, VariableExpression

2009-08-18
Predicates.IsFalse, .IsTrue w/tests

2009-08-19
IfCommand
BinaryExpression, ArithmeticBinaryExpression
UnaryExpression, ArithmeticUnaryExpression

2009-08-20
WhileCommand
ForEachCommand
BindingEnvironment with parent

2009-08-23
CompareExpression
AndExpression, OrExpression, NotExpression
ComparisonOperator
ForCommand

2009-08-24
Function
ICallable
BindingEnvironment.SetLocalValue

2009-08-25
FunctionStatus, Machine.CurrentFunctionStatus
ReturnCommand
Function first test
InvokeExpression wo/test

2009-08-26
ICallable, Function tests
InvokeExpression tests

2009-08-27
AjSharp
Token, Lexer, Parser w/Tests
AjSharp.Tests

2009-08-29
if, if/else, return command in Parser w/Tests